Fixed spacing in search page

--- a/libsrc/scss/community.scss
+++ b/libsrc/scss/community.scss
@@ -500,6 +500,7 @@ body {
             background-size: 100% 100%;
             // vertical-align: middle;
         }
+        button.create { margin-left:5px; }
         .float_right {
             position: absolute;
             right: 0px;
